Première version de la maquette complète sans animations

--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,12 @@ header {
   padding: 3px 0 2px 0;
 }
 header #header-logo {
-  width: 50%;
-  margin: 10px auto 10px auto;
+  width: 40%;
+  margin: 9px auto 7px auto;
+}
+header #header-logo-menu {
+  width: 40%;
+  margin: 9px auto 7px auto;
 }
 
 #location {
@@ -25,6 +29,18 @@ header #header-logo {
 #location p {
   font-weight: 400;
   font-size: small;
+}
+
+button {
+  width: 50%;
+  background: linear-gradient(#FF79DA, #9356DC);
+  color: white;
+  font-size: smaller;
+  border-radius: 30px;
+  border: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 13px 0 15px 0;
+  margin: 5px 0px 35px 0px;
 }
 
 #main-header {
@@ -43,17 +59,6 @@ header #header-logo {
   margin-top: 0px;
   padding: 0px 20px 0 20px;
   font-weight: 100;
-}
-#main-header button {
-  width: 50%;
-  background: linear-gradient(#FF79DA, #9356DC);
-  color: white;
-  font-size: smaller;
-  border-radius: 30px;
-  border: none;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 13px 0 15px 0;
-  margin: 5px 0px 35px 0px;
 }
 
 #fonctionnement {
@@ -148,6 +153,106 @@ footer .footerdiv i {
 footer p {
   margin: 10px 0 0 0px;
   font-size: medium;
+}
+
+.menu-img {
+  height: 300px;
+}
+.menu-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.menu-header {
+  display: flex;
+}
+.menu-header i {
+  color: black;
+  position: relative;
+  left: 15px;
+  top: 12px;
+}
+
+.menu {
+  background-color: rgb(246, 246, 246);
+  border-radius: 25px 25px 0 0;
+  padding: 0 12px 10px 12px;
+  margin: 0 0 0 0;
+  position: relative;
+  bottom: 30px;
+}
+.menu h4 {
+  font-weight: 300;
+  margin: 12px 0 0 0;
+  padding: 5px 0 5px 0;
+}
+.menu #borderbottom {
+  border-bottom: 3px solid #99E2D0;
+  position: absolute;
+  right: 85%;
+  left: 12px;
+}
+.menu button {
+  width: 50%;
+  background: linear-gradient(#FF79DA, #9356DC);
+  color: white;
+  font-size: small;
+  border-radius: 30px;
+  border: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 15px 0 15px 0;
+  margin: 50px auto 35px auto;
+  display: flex;
+  justify-content: center;
+}
+
+.menu-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu-title h1 {
+  font-family: "Shrikhand", cursive;
+  margin: 0 0 0 0;
+  padding: 20px 10px 20px 0;
+}
+.menu-title i {
+  position: relative;
+  right: 10px;
+}
+
+.menu-item {
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.2);
+  padding: 10px 0 10px 10px;
+  margin: 15px 0 0 0;
+  display: flex;
+}
+.menu-item p {
+  margin: 0 0 0 0;
+  padding: 2px 0 2px 0;
+  font-weight: 300;
+}
+.menu-item .item-name {
+  font-weight: 600;
+  font-size: large;
+}
+.menu-item .container-name {
+  width: 83%;
+}
+.menu-item .container-name p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.menu-item .container-price {
+  padding: 20px 0 0 0;
+  margin: 0 10px 0 10px;
+}
+.menu-item .container-price .prix {
+  font-weight: 600;
 }
 
 /*# sourceMappingURL=styles.css.map */
