--- a/styles.scss
+++ b/styles.scss
@@ -13,6 +13,8 @@ $bgcolor2: rgb(234,234,234);
     // padding-right: 2px;
 }
 
+
+
 header {
     
     // margin: 0 0 0 0;
@@ -21,10 +23,16 @@ header {
     
 
     #header-logo {
-        width: 50%;
-        margin: 10px auto 10px auto;
+        width: 40%;
+        margin: 9px auto 7px auto;
+    }
+
+    #header-logo-menu {
+        width: 40%;
+        margin: 9px auto 7px auto;
     }
 }
+
 #location {
     display: flex;
     justify-content: center;
@@ -39,6 +47,18 @@ header {
         font-weight: 400;
         font-size: small;
     }
+}
+
+button {
+    width: 50%;
+    background: linear-gradient($color2, $color1);
+    color: white;
+    font-size: smaller;
+    border-radius: 30px;
+    border: none;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    padding: 13px 0 15px 0;
+    margin: 5px 0px 35px 0px;
 }
 
 #main-header {
@@ -58,18 +78,6 @@ header {
         margin-top: 0px;
         padding: 0px 20px 0 20px;
         font-weight: 100;
-    }
-
-    button {
-        width: 50%;
-        background: linear-gradient($color2, $color1);
-        color: white;
-        font-size: smaller;
-        border-radius: 30px;
-        border: none;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        padding: 13px 0 15px 0;
-        margin: 5px 0px 35px 0px;
     }
 
 } 
@@ -185,3 +193,109 @@ footer {
         font-size: medium;
     }
 }
+
+.menu-img {
+    height: 300px;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+}
+
+.menu-header {
+    display: flex;
+    i {
+        color: black;
+        position: relative;
+        left: 15px;
+        top: 12px;
+    }
+}
+
+.menu {
+    background-color: $bgcolor1;
+    border-radius: 25px 25px 0 0;
+    padding: 0 12px 10px 12px;
+    margin: 0 0 0 0;
+    position: relative;
+    bottom: 30px;
+    h4 {
+        font-weight: 300;
+        margin: 12px 0 0 0;
+        padding: 5px 0 5px 0;
+    }
+    #borderbottom {
+        border-bottom: 3px solid $color3;
+        position: absolute;
+        right: 85%;
+        left: 12px;
+    }
+    button {
+        width: 50%;
+        background: linear-gradient($color2, $color1);
+        color: white;
+        font-size: small;
+        border-radius: 30px;
+        border: none;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        padding: 15px 0 15px 0;
+        margin: 50px auto 35px auto;
+        display: flex;
+        justify-content: center;
+    }
+    
+}
+
+.menu-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    h1 {
+        font-family: 'Shrikhand', cursive;
+        margin: 0 0 0 0;
+        padding: 20px 10px 20px 0; 
+    }
+    i {
+        position: relative;
+        right: 10px;
+    }
+}
+
+.menu-item {
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0 2px 6px 1px rgba(0,0,0,0.2);
+    padding: 10px 0 10px 10px;
+    margin: 15px 0 0 0;
+    display: flex;
+    p {
+        margin: 0 0 0 0;
+        padding: 2px 0 2px 0;
+        font-weight: 300;
+    }
+    .item-name {
+        font-weight: 600;
+        font-size: large;
+    }
+
+    .container-name {
+        width: 83%;
+        p {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    }
+
+    .container-price {
+        padding: 20px 0 0 0;
+        margin: 0 10px 0 10px;
+        .prix {
+            font-weight: 600;
+        }
+    }
+
+}
+
