--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,10 @@ button {
   padding: 13px 0 15px 0;
   margin: 5px 0px 35px 0px;
 }
+button:hover {
+  background: linear-gradient(#99E2D0, #FF79DA);
+  box-shadow: 0px 6px 8px 1px rgba(0, 0, 0, 0.2);
+}
 
 #main-header {
   background-color: rgb(246, 246, 246);
@@ -73,6 +77,12 @@ button {
   padding: 10px 0 10px 0;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+#fonctionnement .steps:hover {
+  background-color: rgb(234, 234, 234);
+}
+#fonctionnement .steps:hover i {
+  color: #9356DC;
+}
 #fonctionnement .steps .number {
   border-radius: 50px;
   font-size: smaller;
@@ -92,7 +102,7 @@ button {
 }
 
 #restaurants {
-  padding: 40px 15px 40px 2px;
+  padding: 40px 2px 40px 2px;
   background-color: rgb(246, 246, 246);
 }
 #restaurants h2 {
@@ -101,15 +111,18 @@ button {
 #restaurants a {
   text-decoration: none;
   color: black;
+  margin: 0;
+  display: flex;
+  justify-content: center;
 }
 #restaurants .resto-card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  width: 350px;
+  width: 100%;
   height: 240px;
   border-radius: 25px;
   background-color: white;
-  margin: 10px 10px 17px 10px;
+  margin: 2%;
 }
 #restaurants .resto-card .card-img-div {
   width: 100%;
@@ -130,8 +143,8 @@ button {
 #restaurants .resto-card .textcontainer i {
   width: 50px;
   position: relative;
-  left: 290px;
-  bottom: 40px;
+  left: 87%;
+  bottom: 43%;
 }
 
 footer {
@@ -153,6 +166,14 @@ footer .footerdiv i {
 footer p {
   margin: 10px 0 0 0px;
   font-size: medium;
+}
+footer a {
+  text-decoration: none;
+  color: white;
+}
+
+#menu-main {
+  background-color: rgb(246, 246, 246);
 }
 
 .menu-img {
@@ -205,6 +226,10 @@ footer p {
   margin: 50px auto 35px auto;
   display: flex;
   justify-content: center;
+}
+.menu button:hover {
+  background: linear-gradient(#99E2D0, #FF79DA);
+  box-shadow: 0px 6px 8px 1px rgba(0, 0, 0, 0.2);
 }
 
 .menu-title {
