--- a/styles.scss
+++ b/styles.scss
@@ -59,6 +59,11 @@ button {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     padding: 13px 0 15px 0;
     margin: 5px 0px 35px 0px;
+
+    &:hover {
+        background: linear-gradient($color3, $color2);
+        box-shadow: 0px 6px 8px 1px rgba(0,0,0,0.2);
+    }
 }
 
 #main-header {
@@ -93,6 +98,14 @@ button {
         border-radius: 15px;
         padding: 10px 0 10px 0;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+
+        &:hover {
+            background-color: $bgcolor2;
+            i {
+                color: $color1;
+            }
+        }
+
         .number {
             border-radius: 50px;
             font-size: smaller;
@@ -113,11 +126,13 @@ button {
             font-weight: bold;
         }
 
+    
+
     }
 }
 
 #restaurants {
-    padding: 40px 15px 40px 2px;
+    padding: 40px 2px 40px 2px;
     background-color: $bgcolor1;
 
     h2 {
@@ -127,16 +142,19 @@ button {
     a { 
         text-decoration: none; 
         color : black;
+        margin: 0;
+        display: flex;
+        justify-content: center;
     }    
 
     .resto-card {
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
-        width: 350px;
+        width: 100%;
         height: 240px;
         border-radius: 25px;
         background-color: white;
-        margin: 10px 10px 17px 10px;
+        margin: 2%;
 
         .card-img-div {
             width: 100%;
@@ -157,8 +175,8 @@ button {
             i {
                 width: 50px;
                 position: relative;
-                left: 290px;
-                bottom: 40px;
+                left: 87%;
+                bottom: 43%;
             }
 
         }
@@ -192,6 +210,15 @@ footer {
         margin: 10px 0 0 0px;
         font-size: medium;
     }
+
+    a {
+        text-decoration: none;
+        color: white;
+    }
+}
+
+#menu-main {
+    background-color: $bgcolor1;
 }
 
 .menu-img {
@@ -244,6 +271,10 @@ footer {
         margin: 50px auto 35px auto;
         display: flex;
         justify-content: center;
+        &:hover {
+            background: linear-gradient($color3, $color2);
+            box-shadow: 0px 6px 8px 1px rgba(0,0,0,0.2);
+        }
     }
     
 }
