Ajout du loading spinner

--- a/styles.css
+++ b/styles.css
@@ -306,4 +306,69 @@ footer a {
   opacity: 1;
 }
 
+#overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 2;
+  cursor: pointer;
+  animation: hide 3s ease-in 0s 1 forwards;
+}
+
+.load {
+  width: 400px;
+  height: 300px;
+  display: flex;
+  justify-content: space-evenly;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.load__bar {
+  background-color: #99E2D0;
+  height: 100%;
+  width: 30px;
+  border-radius: 50px;
+  animation: bars 800ms backwards 5 ease-in-out alternate;
+}
+.load__bar--1 {
+  animation-delay: 160ms;
+}
+.load__bar--2 {
+  animation-delay: 320ms;
+}
+.load__bar--3 {
+  animation-delay: 480ms;
+}
+.load__bar--4 {
+  animation-delay: 640ms;
+}
+.load__bar--5 {
+  animation-delay: 800ms;
+}
+
+@keyframes bars {
+  0% {
+    transform: scaleY(0.5);
+  }
+  100% {
+    transform: scaleY(1);
+    opacity: 0.3;
+  }
+}
+@keyframes hide {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
 /*# sourceMappingURL=styles.css.map */
