--- a/styles.scss
+++ b/styles.scss
@@ -308,12 +308,15 @@ footer {
 }
 
 .menu-item {
+    width: 100%;
+    height: 20%;
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 2px 6px 1px rgba(0,0,0,0.2);
-    padding: 10px 0 10px 10px;
+    padding: 0 0 0 10px;
     margin: 15px 0 0 0;
     display: flex;
+    justify-items: flex-end;
     opacity: 0;
     animation: appear 1400ms ease-in-out 0s 1 forwards;
     @for $i from 1 through 10 {
@@ -321,6 +324,8 @@ footer {
             animation-delay: 250ms * $i;
          }
     }
+    
+
     p {
         margin: 0 0 0 0;
         padding: 2px 0 2px 0;
@@ -333,6 +338,10 @@ footer {
 
     .container-name {
         width: 83%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        padding: 10px 0 10px 0;
         p {
             white-space: nowrap;
             overflow: hidden;
@@ -341,12 +350,43 @@ footer {
     }
 
     .container-price {
-        padding: 20px 0 0 0;
-        margin: 0 10px 0 10px;
+        width: 20px;
+        
+        margin: 0;
+        // position: relative;
+        // right: 50px;
+        padding: 10px 0 10px 0;
         .prix {
+            padding: 20px 10px 0 10px;
             font-weight: 600;
         }
     }
+    .checkmark {
+        height: 67.1 px;
+        width: 0%;
+        color: white;
+        background-color: green;
+        // position: relative;
+        // left: 100%;
+        display: flex;
+        overflow: hidden;
+        visibility: hidden;
+        i {
+            position: relative;
+            // left: 50px;
+            top: 24px;
+        }
+    }
+    &:hover {
+        .checkmark {
+            visibility: visible;
+            animation: additem 1000ms forwards 1 ease-in-out alternate;
+        }
+        i {
+            animation: additem__icon 1000ms forwards 1 ease-in-out alternate;
+        }
+    }
+        
 
 }
 
@@ -457,5 +497,34 @@ $anim-delay: calc($anim-dur / $num-bars);
     }
     100% {
         opacity: 1;
+    }
+}
+
+
+// checkmark menu
+
+@keyframes additem {
+    0% {
+        width: 0px;
+        position: relative;
+        left: 20px;
+        
+    }
+    100% {
+        width: 15%;
+        left: 0px;
+    }
+}
+
+@keyframes additem__icon {
+    0% {
+        position: relative;
+        left: 60px;
+        transform: rotate(180deg);
+        
+    }
+    100% {
+        left: 20px;
+        transform: rotate (0deg);
     }
 }
