--- a/styles.scss
+++ b/styles.scss
@@ -317,6 +317,7 @@ footer {
     margin: 15px 0 0 0;
     display: flex;
     opacity: 0;
+    overflow: hidden;
     animation: appear 1400ms ease-in-out 0s 1 forwards;
     @for $i from 1 through 10 {
         &--#{$i} {
@@ -362,12 +363,18 @@ footer {
         width: 0%;
         color: white;
         background-color: $color3;
-        overflow: hidden;
+        // overflow: hidden;
         visibility: hidden;
         border-radius: 0 15px 15px 0;
         display: flex;
         justify-content: center;
         align-items: center;
+        animation: out 800ms;
+        i {
+            margin: 0 20px 0 20px;
+            animation: out__icon 800ms ease-in-out;
+        }
+        // transition: additem 800ms backwards ease-in-out;
         // i {
         //     // position: relative;
         //     // top: 24px;
@@ -376,10 +383,10 @@ footer {
     &:hover {
         .checkmark {
             visibility: visible;
-            animation: additem 1000ms forwards 1 ease-in-out alternate;
+            animation: additem 800ms forwards 1 ease-in-out alternate;
         }
         i {
-            animation: additem__icon 1000ms forwards 1 ease-in-out alternate;
+            animation: additem__icon 700ms forwards 1 ease-in-out alternate;
         }
     }
         
@@ -502,20 +509,42 @@ $anim-delay: calc($anim-dur / $num-bars);
 @keyframes additem {
     0% {
         width: 0px;
-        position: relative;
+        visibility: visible;
     }
     100% {
-        width: 15%;
-        left: 0px;
+        width: 20%;
+    }
+}
+
+@keyframes out {
+    0% {
+        position: relative;
+        width: 20%;
+        visibility: visible;
+    }
+    100% {
+        width: 0%;
+    }
+}
+
+@keyframes out__icon {
+    0% {
+        padding: 0;
+    }
+    50% {
+        padding: 0 0 0 10px;
+    }
+    100% {
+        padding: 0 0 0 10px;
     }
 }
 
 @keyframes additem__icon {
     0% {
-        transform: rotate(600deg);
+        transform: rotate(0deg);
         
     }
     100% {
-        transform: rotate (0deg);
+        transform: rotate(360deg);
     }
 }
